2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/AddinRegistry.cs: Allow reading add-in manifests
	  even if the registry is not fully initialized.

2009-08-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Update target framework to 2.0.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinScanner.cs: Properly read
	  InserBefore and InsertAfter attribute properties. Patch by
	  Levi Bard.

2009-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Properly sign assemblies.

2009-05-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Remove startup class option.

	* Mono.Addins.Database/SetupProcess.cs:
	* Mono.Addins.Database/AddinDatabase.cs: Use a generated
	  assembly instead of the dll to execute the scanner in a
	  separate process.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/RuntimeAddin.cs: New overload for GetFilePath.

	* Mono.Addins/AddinSessionService.cs: Improve error reporting
	  when the description of an add-in can't be loaded.

	* Mono.Addins.Database/Util.cs:
	* Mono.Addins/AddinRegistry.cs: Allow using special folder
	  names in all paths. E.g. [ApplicationData]/MonoDevelop. It
	  can be used when initializing the add-in engine or in
	  .addins files.

	* Mono.Addins/Addin.cs: Write errors when loading a
	  description.

2009-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/ExtensionNodeChildAttribute.cs: Make sure the
	  ExtensionNodeTypeName property is set when using the
	  attribute constructor.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.csproj: Updated.

	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins.Description/AddinDescription.cs: BasePath is now
	  public.

	* Mono.Addins.Database/Util.cs: Added methods for checking if
	  the app is running on mono.

	* Mono.Addins.Database/SetupDomain.cs:
	* Mono.Addins.Database/SetupProcess.cs: